# DirectX_Game_EngineMaker

./: .gitignore  CMakeLists.txt
.agent/workflows/: rebuild.md
.github/workflows/: cmake.yml
Scripting/ForgeEngine-Scripting/Source/: ForgeCore.cs  PlayerController.cs
Source/Editor/: EditorCamera.cpp  EditorCamera.h  EditorUI.cpp  EditorUI.h  GridShader.hlsl  Main.cpp  SceneViewRenderer.cpp  SceneViewRenderer.h
Source/Runtime/Core/: Window.cpp  Window.h
Source/Runtime/Renderer/: DX12Context.cpp  DX12Context.h
Source/Runtime/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  TransformComponent.h
Source/Runtime/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.h
